static/css/base.css
html {
    height: 100%;
}

body {
    height: calc(100vh - 80px);
    font-family: 'Fjalla One', sans-serif;
}

label, th, td {
    color: #fff;
}

.navbar-brand img {
    background: #000;
    color: #fff;
    width: 20%;
}

.carousel-item img {
    height: calc(100vh - 80px);
}

.follow-links.show {
    display: flex;
}

.dropdown-menu {
    border-radius: 0;
}

.hero-container h1 {
    font-weight: 600;
}

.dropdown-item:hover,
.dropdown-item:active,
.dropdown-item:focus {
    background-color:#000;
    color: #fff;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.header-font {
    text-transform: uppercase;
    color: #000;
    font-size: 2.5rem;
}

.header-container {
    background: #fff;
}

.main-logo-link {
    width: fit-content;
}

.shop-now-button {
    background: #000;
    color: #fff;
    min-width: 260px;
}

.btn-white {
    background: #fff;
    color: #000;
}

.btn-black {
    background: black;
    color: white;
}

.navbar-toggler-icon {
    color: #fff;
}

.btn-white:hover,
.btn-white:active,
.btn-white:focus,
.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background-color: rgb(230, 230, 230);
    color: #000;
}

.border-white {
    border: 1px solid #fff !important;
}

.border-black {
    border: 1px solid black !important;
}

.bg-black {
    background: #000 !important;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: #000;
    z-index: -1;
}

.btn-outline-black {
    background: #fff;
    color: #000 !important;
}

.remove-item,
.update-link {
    cursor: pointer;
}

#footer {
    background-color: rgb(230, 230, 230);
}

#footer ul li {
    text-transform: uppercase;
    font-size: 1.3rem;
    font-weight: 600;
}

#footer ul li a {
    text-decoration: none;
    color: rgb(153, 149, 149);
}

#footer ul li a:hover {
    color: #000;
}

#footer p {
    color: rgb(153, 149, 149);
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

#accordionExample .card {
    background: rgb(230, 230, 230);
}

#accordionExample .card-body {
    background: #fff;
}

.scrollTop {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    bottom: 445px;
    right: 45px;
    width: 55px;
    height: 55px;
    background: #fff;
    cursor: pointer;
    z-index: 100000;
    visibility: hidden;
    opacity: 0;
    transition: 0.25s;
}

.scrollTop:hover {
    background: #000;
    color: #fff;
}

.scrollTop i {
    font-size: 1.25rem;
}

.scrollTop.active {
    bottom: 45px;
    visibility: visible;
    opacity: 1;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
    text-transform: uppercase;
	display: inline-block;
    color: #000;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #fff;
    border: 0;
    padding: .375rem .75rem;
    font-size: 1.08rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
    background-color: rgb(230, 230, 230);
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.checked {
    color: yellow;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* MEDIA QUERIES */

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    body {
        height: calc(100vh - 96px);
    }
}

/* MEDIA QUERIES */
@media screen and (max-width: 767px) {
    /* Hero Section */
    .hero-container h1 {
        font-size: 3.5rem;
    }
    /* Header Font */
    .header-font, .display-4 {
        font-size: 2rem;
        padding-left: 0.5rem !important;
    }
    /* About Content */
    .about-left-column h1 {
        font-size: 2.2rem;
    }
    .about-right-column p {
        font-size: 1rem;
    }
    /* Shopping Bag */
    .btn-lg {
        font-size: 1rem;
    }
    .text-white {
        padding-left: 0.5rem;
    }
}

@media screen and (max-width: 354px) {
    /* Hero Section */
    .hero-container h1 {
        font-size: 2.5rem;
    }
    /* Header Font */
    .header-font {
        font-size: 1.5rem;
        padding: 0 !important;
        margin: 0 !important;
    }
    /* About Content */
    .about-left-column h1 {
        font-size: 1.8rem;
    }
    .about-right-column p {
        font-size: .8rem;
    }
    /* Shopping Bag */
    .btn-lg {
        font-size: .55rem;
    }

    .increment-qty, .decrement-qty {
        padding: .25rem .5rem !important;
    }
}

